# topo-tools-py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.postgis  README.md  SECURITY.md  compose.yaml  pyproject.toml
.claude/skills/verify-duckdb-function/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
app/: _01_inputs.py  _01a_clean.py  _02_lines.py  _03_points.py  _04_voronoi.py  _05_merge.py  _06_outputs.py  __init__.py  __main__.py  attempt.py  clean.py  cleanup.py  config.py  inputs.py  lines.py  merge.py  outputs.py  points.py  polygonize.py  topology.py  utils.py  voronoi.py
app_postgis/: config.py  outputs.py
docs/: change.md  clean.md  cleaning.md  examples.md  extend.md  match.md  matching.md  performance.md  publishing.md  topology.md  voronoi-memory.md
tests/: test_change.py  test_clean.py  test_extend.py  test_match.py
topo_tools/: __init__.py  __main__.py
topo_tools/api/: __init__.py  change.py  clean.py  extend.py  match.py
topo_tools/cli/: __init__.py  main.py
topo_tools/core/: __init__.py  duckdb_utils.py
topo_tools/core/change/: _01_inputs.py  _02_overlap.py  _03_classify.py  _04_outputs.py  __init__.py  _columns.py  _constants.py  _unionfind.py
topo_tools/core/clean/: _01_inputs.py  _02_issues.py  _03_clean.py  _04_outputs.py  __init__.py  _constants.py  _units.py
topo_tools/core/extend/: _01_inputs.py  _03_points.py  _04_voronoi.py  _05_merge.py  _06_outputs.py  __init__.py  _constants.py  _coverage.py  attempt.py
topo_tools/core/match/: _01_inputs.py  _02_assign.py  _03_groups.py  _04_merge.py  _05_outputs.py  __init__.py  _clip.py  _constants.py
