[project]
name = "topo-tools"
version = "0.1.0"
description = "DuckDB-powered geospatial topology utilities (edge-matching, topology cleaning, more)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click", "duckdb", "psutil"]

[project.scripts]
topo-tools = "topo_tools.cli.main:cli"

[dependency-groups]
dev = ["pre-commit", "ruff"]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "S603", "S607", "S608"]
