[project]
name = "topo-tools"
version = "0.1.0"
description = "DuckDB-powered geospatial topology utilities (edge-matching, topology cleaning, more)"
readme = "README.md"
license = "MIT"
authors = [{ name = "fieldmaps.io" }]
requires-python = ">=3.10"
dependencies = ["click", "duckdb>=1.5.3", "psutil"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/fieldmaps/topo-tools-py"
Repository = "https://github.com/fieldmaps/topo-tools-py"
Issues = "https://github.com/fieldmaps/topo-tools-py/issues"

[project.scripts]
topo-tools = "topo_tools.cli.main:cli"

[dependency-groups]
dev = ["import-linter", "pre-commit", "pytest", "ruff"]

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "S603", "S607", "S608"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D103", "INP001", "S101"]

[tool.importlinter]
root_package = "topo_tools"
include_external_packages = true

[[tool.importlinter.contracts]]
id = "core-no-click"
name = "Core modules must not import Click"
type = "forbidden"
source_modules = ["topo_tools.core"]
forbidden_modules = ["click"]

[[tool.importlinter.contracts]]
id = "api-no-cli"
name = "API modules must not import CLI"
type = "forbidden"
source_modules = ["topo_tools.api"]
forbidden_modules = ["topo_tools.cli"]

[[tool.importlinter.contracts]]
id = "match-may-use-extend-not-reverse"
name = "match may depend on extend; extend must not depend on match"
type = "forbidden"
source_modules = ["topo_tools.core.extend"]
forbidden_modules = ["topo_tools.core.match"]

[[tool.importlinter.contracts]]
id = "clean-may-use-extend-not-reverse"
name = "clean may depend on extend; extend must not depend on clean"
type = "forbidden"
source_modules = ["topo_tools.core.extend"]
forbidden_modules = ["topo_tools.core.clean"]

[[tool.importlinter.contracts]]
id = "change-may-use-extend-not-reverse"
name = "change may depend on extend; extend must not depend on change"
type = "forbidden"
source_modules = ["topo_tools.core.extend"]
forbidden_modules = ["topo_tools.core.change"]
